tests/golden/type_errors/recursive_struct_function_return.cd
struct Node { makeNext: fun(): Node }
